library/src/libqtextformat.h

typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QPen QPen;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QVariant QVariant;
QTextCharFormat* QTextCharFormat_new();
QTextCharFormat* QTextCharFormat_new2(QTextCharFormat* param1);
bool QTextCharFormat_IsValid(const QTextCharFormat* self);
void QTextCharFormat_SetFont(QTextCharFormat* self, QFont* font);
QFont* QTextCharFormat_Font(const QTextCharFormat* self);
void QTextCharFormat_SetFontFamily(QTextCharFormat* self, libqt_string family);
libqt_string QTextCharFormat_FontFamily(const QTextCharFormat* self);
void QTextCharFormat_SetFontFamilies(QTextCharFormat* self, libqt_list /* of libqt_string */ families);
QVariant* QTextCharFormat_FontFamilies(const QTextCharFormat* self);
void QTextCharFormat_SetFontStyleName(QTextCharFormat* self, libqt_string styleName);
QVariant* QTextCharFormat_FontStyleName(const QTextCharFormat* self);
void QTextCharFormat_SetFontPointSize(QTextCharFormat* self, double size);
double QTextCharFormat_FontPointSize(const QTextCharFormat* self);
void QTextCharFormat_SetFontWeight(QTextCharFormat* self, int weight);
int QTextCharFormat_FontWeight(const QTextCharFormat* self);
void QTextCharFormat_SetFontItalic(QTextCharFormat* self, bool italic);
bool QTextCharFormat_FontItalic(const QTextCharFormat* self);
void QTextCharFormat_SetFontCapitalization(QTextCharFormat* self, int capitalization);
int QTextCharFormat_FontCapitalization(const QTextCharFormat* self);
void QTextCharFormat_SetFontLetterSpacingType(QTextCharFormat* self, int letterSpacingType);
int QTextCharFormat_FontLetterSpacingType(const QTextCharFormat* self);
void QTextCharFormat_SetFontLetterSpacing(QTextCharFormat* self, double spacing);
double QTextCharFormat_FontLetterSpacing(const QTextCharFormat* self);
void QTextCharFormat_SetFontWordSpacing(QTextCharFormat* self, double spacing);
double QTextCharFormat_FontWordSpacing(const QTextCharFormat* self);
void QTextCharFormat_SetFontUnderline(QTextCharFormat* self, bool underline);
bool QTextCharFormat_FontUnderline(const QTextCharFormat* self);
void QTextCharFormat_SetFontOverline(QTextCharFormat* self, bool overline);
bool QTextCharFormat_FontOverline(const QTextCharFormat* self);
void QTextCharFormat_SetFontStrikeOut(QTextCharFormat* self, bool strikeOut);
bool QTextCharFormat_FontStrikeOut(const QTextCharFormat* self);
void QTextCharFormat_SetUnderlineColor(QTextCharFormat* self, QColor* color);
QColor* QTextCharFormat_UnderlineColor(const QTextCharFormat* self);
void QTextCharFormat_SetFontFixedPitch(QTextCharFormat* self, bool fixedPitch);
bool QTextCharFormat_FontFixedPitch(const QTextCharFormat* self);
void QTextCharFormat_SetFontStretch(QTextCharFormat* self, int factor);
int QTextCharFormat_FontStretch(const QTextCharFormat* self);
void QTextCharFormat_SetFontStyleHint(QTextCharFormat* self, int hint);
void QTextCharFormat_SetFontStyleStrategy(QTextCharFormat* self, int strategy);
int QTextCharFormat_FontStyleHint(const QTextCharFormat* self);
int QTextCharFormat_FontStyleStrategy(const QTextCharFormat* self);
void QTextCharFormat_SetFontHintingPreference(QTextCharFormat* self, int hintingPreference);
int QTextCharFormat_FontHintingPreference(const QTextCharFormat* self);
void QTextCharFormat_SetFontKerning(QTextCharFormat* self, bool enable);
bool QTextCharFormat_FontKerning(const QTextCharFormat* self);
void QTextCharFormat_SetUnderlineStyle(QTextCharFormat* self, int style);
int QTextCharFormat_UnderlineStyle(const QTextCharFormat* self);
void QTextCharFormat_SetVerticalAlignment(QTextCharFormat* self, int alignment);
int QTextCharFormat_VerticalAlignment(const QTextCharFormat* self);
void QTextCharFormat_SetTextOutline(QTextCharFormat* self, QPen* pen);
QPen* QTextCharFormat_TextOutline(const QTextCharFormat* self);
void QTextCharFormat_SetToolTip(QTextCharFormat* self, libqt_string tip);
libqt_string QTextCharFormat_ToolTip(const QTextCharFormat* self);
void QTextCharFormat_SetSuperScriptBaseline(QTextCharFormat* self, double baseline);
double QTextCharFormat_SuperScriptBaseline(const QTextCharFormat* self);
void QTextCharFormat_SetSubScriptBaseline(QTextCharFormat* self, double baseline);
double QTextCharFormat_SubScriptBaseline(const QTextCharFormat* self);
void QTextCharFormat_SetBaselineOffset(QTextCharFormat* self, double baseline);
double QTextCharFormat_BaselineOffset(const QTextCharFormat* self);
void QTextCharFormat_SetAnchor(QTextCharFormat* self, bool anchor);
bool QTextCharFormat_IsAnchor(const QTextCharFormat* self);
void QTextCharFormat_SetAnchorHref(QTextCharFormat* self, libqt_string value);
libqt_string QTextCharFormat_AnchorHref(const QTextCharFormat* self);
void QTextCharFormat_SetAnchorNames(QTextCharFormat* self, libqt_list /* of libqt_string */ names);
libqt_list /* of libqt_string */ QTextCharFormat_AnchorNames(const QTextCharFormat* self);
void QTextCharFormat_SetTableCellRowSpan(QTextCharFormat* self, int tableCellRowSpan);
int QTextCharFormat_TableCellRowSpan(const QTextCharFormat* self);
void QTextCharFormat_SetTableCellColumnSpan(QTextCharFormat* self, int tableCellColumnSpan);
int QTextCharFormat_TableCellColumnSpan(const QTextCharFormat* self);
void QTextCharFormat_SetFont2(QTextCharFormat* self, QFont* font, int behavior);
void QTextCharFormat_SetFontStyleHint2(QTextCharFormat* self, int hint, int strategy);