src/libqtextformat.bf

public struct QTextCharFormat
{
	[LinkName("QTextCharFormat_new")]
	public static extern void* QTextCharFormat_new();
	[LinkName("QTextCharFormat_new2")]
	public static extern void* QTextCharFormat_new2(QTextCharFormat param1);
	[LinkName("QTextCharFormat_IsValid")]
	public static extern bool QTextCharFormat_IsValid(void* c_this);
	[LinkName("QTextCharFormat_SetFont")]
	public static extern void QTextCharFormat_SetFont(void* c_this, QFont font);
	[LinkName("QTextCharFormat_Font")]
	public static extern QFont QTextCharFormat_Font(void* c_this);
	[LinkName("QTextCharFormat_SetFontFamily")]
	public static extern void QTextCharFormat_SetFontFamily(void* c_this, char8[] family);
	[LinkName("QTextCharFormat_FontFamily")]
	public static extern char8[] QTextCharFormat_FontFamily(void* c_this);
	[LinkName("QTextCharFormat_SetFontFamilies")]
	public static extern void QTextCharFormat_SetFontFamilies(void* c_this, char8[][] families);
	[LinkName("QTextCharFormat_FontFamilies")]
	public static extern QVariant QTextCharFormat_FontFamilies(void* c_this);
	[LinkName("QTextCharFormat_SetFontStyleName")]
	public static extern void QTextCharFormat_SetFontStyleName(void* c_this, char8[] styleName);
	[LinkName("QTextCharFormat_FontStyleName")]
	public static extern QVariant QTextCharFormat_FontStyleName(void* c_this);
	[LinkName("QTextCharFormat_SetFontPointSize")]
	public static extern void QTextCharFormat_SetFontPointSize(void* c_this, double size);
	[LinkName("QTextCharFormat_FontPointSize")]
	public static extern double QTextCharFormat_FontPointSize(void* c_this);
	[LinkName("QTextCharFormat_SetFontWeight")]
	public static extern void QTextCharFormat_SetFontWeight(void* c_this, int32 weight);
	[LinkName("QTextCharFormat_FontWeight")]
	public static extern int32 QTextCharFormat_FontWeight(void* c_this);
	[LinkName("QTextCharFormat_SetFontItalic")]
	public static extern void QTextCharFormat_SetFontItalic(void* c_this, bool italic);
	[LinkName("QTextCharFormat_FontItalic")]
	public static extern bool QTextCharFormat_FontItalic(void* c_this);
	[LinkName("QTextCharFormat_SetFontCapitalization")]
	public static extern void QTextCharFormat_SetFontCapitalization(void* c_this, int64 capitalization);
	[LinkName("QTextCharFormat_FontCapitalization")]
	public static extern int64 QTextCharFormat_FontCapitalization(void* c_this);
	[LinkName("QTextCharFormat_SetFontLetterSpacingType")]
	public static extern void QTextCharFormat_SetFontLetterSpacingType(void* c_this, int64 letterSpacingType);
	[LinkName("QTextCharFormat_FontLetterSpacingType")]
	public static extern int64 QTextCharFormat_FontLetterSpacingType(void* c_this);
	[LinkName("QTextCharFormat_SetFontLetterSpacing")]
	public static extern void QTextCharFormat_SetFontLetterSpacing(void* c_this, double spacing);
	[LinkName("QTextCharFormat_FontLetterSpacing")]
	public static extern double QTextCharFormat_FontLetterSpacing(void* c_this);
	[LinkName("QTextCharFormat_SetFontWordSpacing")]
	public static extern void QTextCharFormat_SetFontWordSpacing(void* c_this, double spacing);
	[LinkName("QTextCharFormat_FontWordSpacing")]
	public static extern double QTextCharFormat_FontWordSpacing(void* c_this);
	[LinkName("QTextCharFormat_SetFontUnderline")]
	public static extern void QTextCharFormat_SetFontUnderline(void* c_this, bool underline);
	[LinkName("QTextCharFormat_FontUnderline")]
	public static extern bool QTextCharFormat_FontUnderline(void* c_this);
	[LinkName("QTextCharFormat_SetFontOverline")]
	public static extern void QTextCharFormat_SetFontOverline(void* c_this, bool overline);
	[LinkName("QTextCharFormat_FontOverline")]
	public static extern bool QTextCharFormat_FontOverline(void* c_this);
	[LinkName("QTextCharFormat_SetFontStrikeOut")]
	public static extern void QTextCharFormat_SetFontStrikeOut(void* c_this, bool strikeOut);
	[LinkName("QTextCharFormat_FontStrikeOut")]
	public static extern bool QTextCharFormat_FontStrikeOut(void* c_this);
	[LinkName("QTextCharFormat_SetUnderlineColor")]
	public static extern void QTextCharFormat_SetUnderlineColor(void* c_this, QColor color);
	[LinkName("QTextCharFormat_UnderlineColor")]
	public static extern QColor QTextCharFormat_UnderlineColor(void* c_this);
	[LinkName("QTextCharFormat_SetFontFixedPitch")]
	public static extern void QTextCharFormat_SetFontFixedPitch(void* c_this, bool fixedPitch);
	[LinkName("QTextCharFormat_FontFixedPitch")]
	public static extern bool QTextCharFormat_FontFixedPitch(void* c_this);
	[LinkName("QTextCharFormat_SetFontStretch")]
	public static extern void QTextCharFormat_SetFontStretch(void* c_this, int32 factor);
	[LinkName("QTextCharFormat_FontStretch")]
	public static extern int32 QTextCharFormat_FontStretch(void* c_this);
	[LinkName("QTextCharFormat_SetFontStyleHint")]
	public static extern void QTextCharFormat_SetFontStyleHint(void* c_this, int64 hint);
	[LinkName("QTextCharFormat_SetFontStyleStrategy")]
	public static extern void QTextCharFormat_SetFontStyleStrategy(void* c_this, int64 strategy);
	[LinkName("QTextCharFormat_FontStyleHint")]
	public static extern int64 QTextCharFormat_FontStyleHint(void* c_this);
	[LinkName("QTextCharFormat_FontStyleStrategy")]
	public static extern int64 QTextCharFormat_FontStyleStrategy(void* c_this);
	[LinkName("QTextCharFormat_SetFontHintingPreference")]
	public static extern void QTextCharFormat_SetFontHintingPreference(void* c_this, int64 hintingPreference);
	[LinkName("QTextCharFormat_FontHintingPreference")]
	public static extern int64 QTextCharFormat_FontHintingPreference(void* c_this);
	[LinkName("QTextCharFormat_SetFontKerning")]
	public static extern void QTextCharFormat_SetFontKerning(void* c_this, bool enable);
	[LinkName("QTextCharFormat_FontKerning")]
	public static extern bool QTextCharFormat_FontKerning(void* c_this);
	[LinkName("QTextCharFormat_SetUnderlineStyle")]
	public static extern void QTextCharFormat_SetUnderlineStyle(void* c_this, int64 style);
	[LinkName("QTextCharFormat_UnderlineStyle")]
	public static extern int64 QTextCharFormat_UnderlineStyle(void* c_this);
	[LinkName("QTextCharFormat_SetVerticalAlignment")]
	public static extern void QTextCharFormat_SetVerticalAlignment(void* c_this, int64 alignment);
	[LinkName("QTextCharFormat_VerticalAlignment")]
	public static extern int64 QTextCharFormat_VerticalAlignment(void* c_this);
	[LinkName("QTextCharFormat_SetTextOutline")]
	public static extern void QTextCharFormat_SetTextOutline(void* c_this, QPen pen);
	[LinkName("QTextCharFormat_TextOutline")]
	public static extern QPen QTextCharFormat_TextOutline(void* c_this);
	[LinkName("QTextCharFormat_SetToolTip")]
	public static extern void QTextCharFormat_SetToolTip(void* c_this, char8[] tip);
	[LinkName("QTextCharFormat_ToolTip")]
	public static extern char8[] QTextCharFormat_ToolTip(void* c_this);
	[LinkName("QTextCharFormat_SetSuperScriptBaseline")]
	public static extern void QTextCharFormat_SetSuperScriptBaseline(void* c_this, double baseline);
	[LinkName("QTextCharFormat_SuperScriptBaseline")]
	public static extern double QTextCharFormat_SuperScriptBaseline(void* c_this);
	[LinkName("QTextCharFormat_SetSubScriptBaseline")]
	public static extern void QTextCharFormat_SetSubScriptBaseline(void* c_this, double baseline);
	[LinkName("QTextCharFormat_SubScriptBaseline")]
	public static extern double QTextCharFormat_SubScriptBaseline(void* c_this);
	[LinkName("QTextCharFormat_SetBaselineOffset")]
	public static extern void QTextCharFormat_SetBaselineOffset(void* c_this, double baseline);
	[LinkName("QTextCharFormat_BaselineOffset")]
	public static extern double QTextCharFormat_BaselineOffset(void* c_this);
	[LinkName("QTextCharFormat_SetAnchor")]
	public static extern void QTextCharFormat_SetAnchor(void* c_this, bool anchor);
	[LinkName("QTextCharFormat_IsAnchor")]
	public static extern bool QTextCharFormat_IsAnchor(void* c_this);
	[LinkName("QTextCharFormat_SetAnchorHref")]
	public static extern void QTextCharFormat_SetAnchorHref(void* c_this, char8[] value);
	[LinkName("QTextCharFormat_AnchorHref")]
	public static extern char8[] QTextCharFormat_AnchorHref(void* c_this);
	[LinkName("QTextCharFormat_SetAnchorNames")]
	public static extern void QTextCharFormat_SetAnchorNames(void* c_this, char8[][] names);
	[LinkName("QTextCharFormat_AnchorNames")]
	public static extern char8[][] QTextCharFormat_AnchorNames(void* c_this);
	[LinkName("QTextCharFormat_SetTableCellRowSpan")]
	public static extern void QTextCharFormat_SetTableCellRowSpan(void* c_this, int32 tableCellRowSpan);
	[LinkName("QTextCharFormat_TableCellRowSpan")]
	public static extern int32 QTextCharFormat_TableCellRowSpan(void* c_this);
	[LinkName("QTextCharFormat_SetTableCellColumnSpan")]
	public static extern void QTextCharFormat_SetTableCellColumnSpan(void* c_this, int32 tableCellColumnSpan);
	[LinkName("QTextCharFormat_TableCellColumnSpan")]
	public static extern int32 QTextCharFormat_TableCellColumnSpan(void* c_this);
	[LinkName("QTextCharFormat_SetFont2")]
	public static extern void QTextCharFormat_SetFont2(void* c_this, QFont font, int64 behavior);
	[LinkName("QTextCharFormat_SetFontStyleHint2")]
	public static extern void QTextCharFormat_SetFontStyleHint2(void* c_this, int64 hint, int64 strategy);
}
